   * Fixed a stray ; character appearing pre-entered in the command console.
   * Fixed bug in wesnothd that was causing server crashes if game with
     multiple network and local players was ran.
   * Added a tab to run the wmlxgettext tool to GUI.pyw
   * Fixed problem with Spectre's hitpoint bar positioning.
   * Show correct number of attacks in case of swarm weapon special (bug #24978)

Version 1.13.5:
 * Campaigns:
   * An Orcish Incursion:
     * Linaera can recruit Mage, and cannot recruit Elves
   * Heir to the Throne:
     * Add journey tracks for 19c/20b path.
     * New sprites for Li'sar.
     * S10: Clarify objectives and change egg image on capture.
     * S19c: Removed the undead and the swamps.
   * Tutorial
     * Improve translatability for languages with gender-dependent pronouns
     * S1: Fix unit being deselected after the select message
     * S2: Highlight (outline) talked-about locations
   * Legend of Wesmere
     * S3: fix bug which silently disabled Urudin retreat AI
 * Graphics:
   * Updated generic portrait of Mermaid Initiate.
   * Added generic portrait for Giant Spider.
 * Language and i18n:
   * Updated translations: British English, Galician, German, Italian, Japanese,
     Polish, Portuguese, RACV, Russian, Scottish Gaelic, Spanish
 * Networking:
   * Reworked the multiplayer server to use asio functions for networking
     operations instead of SDL_net, thus it no longer depends on SDL_net and SDL.
   * The client now uses boost::asio for communication with wesnothd too.
 * Removed support for SDL 1.2. SDL 2 is now the only supported version.
 * Terrains:
   * Changed terrain code of Desert Mountains from Mdy to Mdd.
 * Editor:
   * Allow to set special locations in the editor which can then be read by wml.
 * User Interface:
   * Fix flickering caused by tooltips, closing windows and tabbing into the game (bug #24532)
   * Various design improvements to GUI2 widgets
   * New simpler GUI2 loading screen