@@ -21,6 +21,8 @@ Version 1.13.5+dev:
  * Miscellaneous and bug fixes:
    * Fixed a stray ; character appearing pre-entered in the command console.
    * Show correct number of attacks in case of swarm weapon special (bug #24978)
+   * Fixed bug that icons of buttons under the minimap disappeared when the player opened
+     and closed a menu.
 
 Version 1.13.5:
  * Campaigns:
