@@ -70,6 +70,8 @@ Version 1.13.5+dev:
    * Added a tab to run the wmlxgettext tool to GUI.pyw
    * Fixed problem with Spectre's hitpoint bar positioning.
    * Show correct number of attacks in case of swarm weapon special (bug #24978)
+   * Fixed bug that icons of buttons under the minimap disappeared when the player opened
+     and closed a menu.
 
 Version 1.13.5:
  * Campaigns:
